--- a/pkgs/app/package.json
+++ b/pkgs/app/package.json
@@ -1,17 +1,19 @@
 {
   "scripts": {
-    "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
+    "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
     "@atcute/bluesky": "^1.0.7",
     "@atcute/client": "^2.0.3",
-    "hono": "^4.5.1"
+    "hono": "^4.5.1",
+    "@hono/node-server": "^1.13.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230628.0",
     "prettier": "^3.3.3",
     "typescript": "^5.1.6",
-    "wrangler": "^3.75.0"
+    "wrangler": "^3.75.0",
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1"
   }
 }
